src/lfortran/parser/tokenizer.cpp
/* Generated by re2c 2.2 on Mon Dec 27 15:02:02 2021 */
#line 1 "tokenizer.re"
#include <limits>

#include <lfortran/parser/parser_exception.h>
#include <lfortran/parser/tokenizer.h>
#include <lfortran/parser/parser.tab.hh>
#include <lfortran/bigint.h>

namespace LFortran
{

void lex_format(unsigned char *&cur, Location &loc,
        unsigned char *&start);

void Tokenizer::set_string(const std::string &str)
{
    // The input string must be NULL terminated, otherwise the tokenizer will
    // not detect the end of string. After C++11, the std::string is guaranteed
    // to end with \0, but we check this here just in case.
    LFORTRAN_ASSERT(str[str.size()] == '\0');
    cur = (unsigned char *)(&str[0]);
    string_start = cur;
    cur_line = cur;
    line_num = 1;
}

template<int base>
bool adddgt(uint64_t &u, uint64_t d)
{
    if (u > (std::numeric_limits<uint64_t>::max() - d) / base) {
        return false;
    }
    u = u * base + d;
    return true;
}

bool lex_dec(const unsigned char *s, const unsigned char *e, uint64_t &u)
{
    for (u = 0; s < e; ++s) {
        if (!adddgt<10>(u, *s - 0x30u)) {
            return false;
        }
    }
    return true;
}

// Tokenizes integer of the kind 1234_ikind into `u` and `suffix`
// s ... the start of the integer
// e ... the character after the end
bool lex_int(const unsigned char *s, const unsigned char *e, uint64_t &u,
    Str &suffix)
{
    for (u = 0; s < e; ++s) {
        if (*s == '_') {
            s++;
            suffix.p = (char*) s;
            suffix.n = e-s;
            return true;
        } else if (!adddgt<10>(u, *s - 0x30u)) {
            return false;
        }
    }
    suffix.p = nullptr;
    suffix.n = 0;
    return true;
}

void lex_int_large(Allocator &al, const unsigned char *s,
    const unsigned char *e, BigInt::BigInt &u, Str &suffix)
{
    uint64_t ui;
    if (lex_int(s, e, ui, suffix)) {
        if (ui <= BigInt::MAX_SMALL_INT) {
            u.from_smallint(ui);
            return;
        }
    }
    const unsigned char *start = s;
    for (; s < e; ++s) {
        if (*s == '_') {
            s++;
            suffix.p = (char*) s;
            suffix.n = e-s;

            Str num;
            num.p = (char*)start;
            num.n = s-start-1;
            u.from_largeint(al, num);
            return;
        }
    }
    suffix.p = nullptr;
    suffix.n = 0;
    Str num;
    num.p = (char*)start;
    num.n = e-start;
    u.from_largeint(al, num);
}

uint64_t parse_int(const unsigned char *s)
{
    while (*s == ' ') s++;
    uint64_t u;
    for (u = 0; ; ++s) {
        if (*s >= '0' && *s <= '9') {
            if (!adddgt<10>(u, *s - 0x30u)) {
                return false;
            }
        } else {
            return u;
        }
    }
}

#define KW(x) token(yylval.string); RET(KW_##x);
#define RET(x) token_loc(loc); last_token=yytokentype::x; return yytokentype::x;
#define WARN_REL(x) add_rel_warning(diagnostics, yytokentype::TK_##x);

void Tokenizer::add_rel_warning(diag::Diagnostics &diagnostics, int rel_token) const {
    static const std::map<int, std::pair<std::string, std::string>> m = {
        {yytokentype::TK_EQ, {"==", ".eq."}},
        {yytokentype::TK_NE, {"/=", ".ne."}},
        {yytokentype::TK_LT, {"<",  ".lt."}},
        {yytokentype::TK_GT, {">",  ".gt."}},
        {yytokentype::TK_LE, {"<=", ".le."}},
        {yytokentype::TK_GE, {">=", ".ge."}},
    };
    const std::string rel_new = m.at(rel_token).first;
    const std::string rel_old = m.at(rel_token).second;
    Location loc;
    token_loc(loc);
    diagnostics.tokenizer_style_label(
        "Use '" + rel_new + "' instead of '" + rel_old + "'",
        {loc},
        "help: write this as '" + rel_new + "'");
}

int Tokenizer::lex(Allocator &al, YYSTYPE &yylval, Location &loc, diag::Diagnostics &diagnostics)
{
    if (enddo_state == 1) {
        enddo_state = 2;
        KW(END_DO)
    } else if (enddo_state == 2) {
        enddo_insert_count--;
        if (enddo_insert_count > 0) {
            enddo_state = 1;
        } else {
            enddo_state = 0;
            token_loc(loc); line_num++; cur_line=cur;
            last_token = yytokentype::TK_NEWLINE;
        }
        return yytokentype::TK_NEWLINE;
    }
    for (;;) {
        tok = cur;

        /*
        Re2c has excellent documentation at:

        https://re2c.org/manual/manual_c.html

        The first paragraph there explains the basics:

        * If multiple rules match, the longest match takes precedence
        * If multiple rules match the same string, the earlier rule takes
          precedence
        * Default rule `*` should always be defined, it has the lowest priority
          regardless of its place and matches any code unit
        * We use the "Sentinel character" method for end of input:
            * The end of the input text is denoted with a null character \x00
            * Thus the null character cannot be part of the input otherwise
            * There is one rule to match \x00 to end the parser
            * No other rule is allowed to match \x00, otherwise the re2c block
              would parse past the end of the string and segfaults
            * A special case of the previous point are negated character
              ranges, such as [^"\x00], where one must include \x00 in it to
              ensure this rule does not match \x00 (all other rules simply do
              not mention \x00)
            * See the "Handling the end of input" section in the re2c
              documentation for more info

        The re2c block interacts with the rest of the code via just one pointer
        variable `cur`. On entering the re2c block, the `cur` variable must
        point to the first character of the token to be tokenized by the block.
        The re2c block below then executes on its own until a rule is matched:
        the action in {} is then executed. In that action `cur` points to the
        first character of the next token.

        Before the re2c block we save the current `cur` into `tok`, so that we
        can use `tok` and `cur` in the action in {} to extract the token that
        corresponds to the rule that got matched:

        * `tok` points to the first character of the token
        * `cur-1` points to the last character of the token
        * `cur` points to the first character of the next token
        * `cur-tok` is the length of the token

        In the action, we do one of:

        * call `continue` which executes another cycle in the for loop (which
          will parse the next token); we use this to skip a token
        * call `return` which returns from this function; we return a token
        * throw an exception (terminates the tokenizer)

        In the first two cases, `cur` points to first character of the next
        token, which becomes `tok` at the next iteration of the loop (either
        right away after `continue` or after the `lex` function is called again
        after `return`).

        See the manual for more details.
        */


        // These two variables are needed by the re2c block below internally,
        // initialization is not needed. One can think of them as local
        // variables of the re2c block.
        unsigned char *mar, *ctxmar;
        
#line 221 "tokenizer.cpp"
{
	unsigned char yych;
	unsigned int yyaccept = 0;
	static const unsigned char yybm[] = {
		/* table 1 .. 8: 0 */
		  0,   2,   2,   2,   2,   2,   2,   2, 
		  2,   3,   3,   3,   2,   3,   2,   2, 
		  2,   2,   2,   2,   2,   2,   2,   2, 
		  2,   2,   2,   2,   2,   2,   2,   2, 
		  3,   2,   2,   2,   2,   2,   2,   0, 
		  2,   2,   2,   2,   2,   2,   2,   2, 
		242, 242, 210, 210, 210, 210, 210, 210, 
		146, 146,   2,   2,   2,   2,   2,   2, 
		  2, 150, 150, 150, 150, 150, 150,  22, 
		 22,  22,  22,  22,  22,  22,  22,  22, 
		 22,  22,  22,  22,  22,  22,  22,  22, 
		 22,  22,  22,   2,   2,   2,   2,  26, 
		  2, 150, 150, 150, 150, 150, 150,  22, 
		 22,  22,  22,  22,  22,  22,  22,  22, 
		 22,  22,  22,  22,  22,  22,  22,  22, 
		 22,  22,  22,   2,   2,   2,   2,   2, 
		  2,   2,   2,   2,   2,   2,   2,   2, 
		  2,   2,   2,   2,   2,   2,   2,   2, 
		  2,   2,   2,   2,   2,   2,   2,   2, 
		  2,   2,   2,   2,   2,   2,   2,   2, 
		  2,   2,   2,   2,   2,   2,   2,   2, 
		  2,   2,   2,   2,   2,   2,   2,   2, 
		  2,   2,   2,   2,   2,   2,   2,   2, 
		  2,   2,   2,   2,   2,   2,   2,   2, 
		  2,   2,   2,   2,   2,   2,   2,   2, 
		  2,   2,   2,   2,   2,   2,   2,   2, 
		  2,   2,   2,   2,   2,   2,   2,   2, 
		  2,   2,   2,   2,   2,   2,   2,   2, 
		  2,   2,   2,   2,   2,   2,   2,   2, 
		  2,   2,   2,   2,   2,   2,   2,   2, 
		  2,   2,   2,   2,   2,   2,   2,   2, 
		  2,   2,   2,   2,   2,   2,   2,   2, 
		/* table 9 .. 13: 256 */
		  0, 192, 192, 192, 192, 192, 192, 192, 
		192, 200, 128, 200, 192, 200, 192, 192, 
		192, 192, 192, 192, 192, 192, 192, 192, 
		192, 192, 192, 192, 192, 192, 192, 192, 
		200, 192,  64, 192, 192, 192, 192, 192, 
		192, 192, 192, 192, 192, 192, 192, 192, 
		240, 240, 240, 240, 240, 240, 240, 240, 
		240, 240, 192, 192, 192, 192, 192, 192, 
		192, 224, 224, 224, 224, 224, 224, 224, 
		224, 224, 224, 224, 224, 224, 224, 224, 
		224, 224, 224, 224, 224, 224, 224, 224, 
		224, 224, 224, 192, 192, 192, 192, 192, 
		192, 224, 224, 224, 224, 224, 224, 224, 
		224, 224, 224, 224, 224, 224, 224, 224, 
		224, 224, 224, 224, 224, 224, 224, 224, 
		224, 224, 224, 192, 192, 192, 192, 192, 
		192, 192, 192, 192, 192, 192, 192, 192, 
		192, 192, 192, 192, 192, 192, 192, 192, 
		192, 192, 192, 192, 192, 192, 192, 192, 
		192, 192, 192, 192, 192, 192, 192, 192, 
		192, 192, 192, 192, 192, 192, 192, 192, 
		192, 192, 192, 192, 192, 192, 192, 192, 
		192, 192, 192, 192, 192, 192, 192, 192, 
		192, 192, 192, 192, 192, 192, 192, 192, 
		192, 192, 192, 192, 192, 192, 192, 192, 
		192, 192, 192, 192, 192, 192, 192, 192, 
		192, 192, 192, 192, 192, 192, 192, 192, 
		192, 192, 192, 192, 192, 192, 192, 192, 
		192, 192, 192, 192, 192, 192, 192, 192, 
		192, 192, 192, 192, 192, 192, 192, 192, 
		192, 192, 192, 192, 192, 192, 192, 192, 
		192, 192, 192, 192, 192, 192, 192, 192, 
	};
	yych = *cur;
	if (yybm[256+yych] & 8) {
		goto yy6;
	}
	switch (yych) {
	case 0x00:	goto yy2;
	case '\t':
	case '\n':	goto yy9;
	case ' ':
	case '!':	goto yy11;
	case '"':	goto yy12;
	case '#':	goto yy13;
	case '%':	goto yy14;
	case '&':	goto yy16;
	case '\'':	goto yy17;
	case '(':	goto yy18;
	case ')':	goto yy20;
	case '*':	goto yy22;
	case '+':	goto yy24;
	case ',':	goto yy26;
	case '-':	goto yy28;
	case '.':	goto yy30;
	case '/':	goto yy31;
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy33;
	case ':':	goto yy36;
	case ';':	goto yy38;
	case '<':	goto yy40;
	case '=':	goto yy42;
	case '>':	goto yy44;
	case 'A':
	case 'a':	goto yy46;
	case 'B':
	case 'b':	goto yy48;
	case 'C':
	case 'c':	goto yy49;
	case 'D':
	case 'd':	goto yy50;
	case 'E':
	case 'e':	goto yy51;
	case 'F':
	case 'f':	goto yy52;
	case 'G':
	case 'g':	goto yy53;
	case 'H':
	case 'J':
	case 'X':
	case 'Y':
	case '_':
	case 'h':
	case 'j':
	case 'x':
	case 'y':	goto yy54;
	case 'I':
	case 'i':	goto yy56;
	case 'K':
	case 'k':	goto yy57;
	case 'L':
	case 'l':	goto yy58;
	case 'M':
	case 'm':	goto yy59;
	case 'N':
	case 'n':	goto yy60;
	case 'O':
	case 'o':	goto yy61;
	case 'P':
	case 'p':	goto yy62;
	case 'Q':
	case 'q':	goto yy63;
	case 'R':
	case 'r':	goto yy64;
	case 'S':
	case 's':	goto yy65;
	case 'T':
	case 't':	goto yy66;
	case 'U':
	case 'u':	goto yy67;
	case 'V':
	case 'v':	goto yy68;
	case 'W':
	case 'w':	goto yy69;
	case 'Z':
	case 'z':	goto yy70;
	case '[':	goto yy71;
	case ']':	goto yy73;
	case '|':	goto yy75;
	default:	goto yy4;
	}
yy2:
	++cur;
#line 250 "tokenizer.re"
	{ RET(END_OF_FILE); }
#line 393 "tokenizer.cpp"
yy4:
	++cur;
yy5:
#line 241 "tokenizer.re"
	{ token_loc(loc);
                std::string t = token();
                throw parser_local::TokenizerError(diag::Diagnostic(
                    "Token '" + t + "' is not recognized",
                    diag::Level::Error, diag::Stage::Tokenizer, {
                        diag::Label("token not recognized", {loc})
                    })
                );
            }
#line 407 "tokenizer.cpp"
yy6:
	yych = *++cur;
	if (yybm[256+yych] & 8) {
		goto yy6;
	}
#line 251 "tokenizer.re"
	{ continue; }
#line 415 "tokenizer.cpp"
yy9:
	++cur;
#line 502 "tokenizer.re"
	{
                if (enddo_newline_process) {
                    enddo_newline_process = false;
                    enddo_state = 1;
                    return yytokentype::TK_NEWLINE;
                } else {
                    enddo_newline_process = false;
                    enddo_insert_count = 0;
                    token_loc(loc); line_num++; cur_line=cur;
                    last_token = yytokentype::TK_NEWLINE;
                    return yytokentype::TK_NEWLINE;
                }
            }
#line 432 "tokenizer.cpp"
yy11:
	yyaccept = 0;
	yych = *(mar = ++cur);
	if (yych <= 0x00) goto yy5;
	goto yy78;
yy12:
	yyaccept = 0;
	yych = *(mar = ++cur);
	if (yych <= 0x00) goto yy5;
	goto yy83;
yy13:
	yyaccept = 0;
	yych = *(mar = ++cur);
	if (yych <= 0x00) goto yy5;
	goto yy87;
yy14:
	++cur;
#line 535 "tokenizer.re"
	{ RET(TK_PERCENT) }
#line 452 "tokenizer.cpp"
yy16:
	yyaccept = 0;
	yych = *(mar = ++cur);
	if (yych <= '\f') {
		if (yych <= 0x08) goto yy5;
		if (yych <= '\v') goto yy91;
		goto yy5;
	} else {
		if (yych <= '\r') goto yy91;
		if (yych <= 0x1F) goto yy5;
		if (yych <= '!') goto yy91;
		goto yy5;
	}
yy17:
	yyaccept = 0;
	yych = *(mar = ++cur);
	if (yych <= 0x00) goto yy5;
	goto yy98;
yy18:
	yych = *++cur;
	if (yych == '/') {
		ctxmar = cur;
		goto yy101;
	}
#line 517 "tokenizer.re"
	{ RET(TK_LPAREN) }
#line 479 "tokenizer.cpp"
yy20:
	++cur;
#line 525 "tokenizer.re"
	{ RET(TK_RPAREN) }
#line 484 "tokenizer.cpp"
yy22:
	yych = *++cur;
	if (yych == '*') goto yy102;
#line 537 "tokenizer.re"
	{ RET(TK_STAR) }
#line 490 "tokenizer.cpp"
yy24:
	++cur;
#line 529 "tokenizer.re"
	{ RET(TK_PLUS) }
#line 495 "tokenizer.cpp"
yy26:
	++cur;
#line 536 "tokenizer.re"
	{ RET(TK_COMMA) }
#line 500 "tokenizer.cpp"
yy28:
	++cur;
#line 530 "tokenizer.re"
	{ RET(TK_MINUS) }
#line 505 "tokenizer.cpp"
yy30:
	yyaccept = 0;
	yych = *(mar = ++cur);
	switch (yych) {
	case '.':	goto yy104;
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy106;
	case 'A':
	case 'a':	goto yy109;
	case 'B':
	case 'C':
	case 'D':
	case 'H':
	case 'I':
	case 'J':
	case 'K':
	case 'M':
	case 'P':
	case 'Q':
	case 'R':
	case 'S':
	case 'U':
	case 'V':
	case 'W':
	case 'Y':
	case 'Z':
	case 'b':
	case 'c':
	case 'd':
	case 'h':
	case 'i':
	case 'j':
	case 'k':
	case 'm':
	case 'p':
	case 'q':
	case 'r':
	case 's':
	case 'u':
	case 'v':
	case 'w':
	case 'y':
	case 'z':	goto yy110;
	case 'E':
	case 'e':	goto yy112;
	case 'F':
	case 'f':	goto yy113;
	case 'G':
	case 'g':	goto yy114;
	case 'L':
	case 'l':	goto yy115;
	case 'N':
	case 'n':	goto yy116;
	case 'O':
	case 'o':	goto yy117;
	case 'T':
	case 't':	goto yy118;
	case 'X':
	case 'x':	goto yy119;
	default:	goto yy5;
	}
yy31:
	yych = *++cur;
	if (yych <= '.') {
		if (yych == ')') goto yy120;
	} else {
		if (yych <= '/') goto yy122;
		if (yych == '=') goto yy124;
	}
#line 534 "tokenizer.re"
	{ RET(TK_SLASH) }
#line 585 "tokenizer.cpp"
yy33:
	yyaccept = 1;
	yych = *(mar = ++cur);
	if (yybm[256+yych] & 16) {
		goto yy33;
	}
	if (yych <= ' ') {
		if (yych <= '\v') {
			if (yych == '\t') {
				ctxmar = cur;
				goto yy126;
			}
			if (yych >= '\v') {
				ctxmar = cur;
				goto yy126;
			}
		} else {
			if (yych == '\r') {
				ctxmar = cur;
				goto yy126;
			}
			if (yych >= ' ') {
				ctxmar = cur;
				goto yy126;
			}
		}
	} else {
		if (yych <= 'E') {
			if (yych == '.') {
				ctxmar = cur;
				goto yy128;
			}
			if (yych >= 'D') goto yy129;
		} else {
			if (yych <= '_') {
				if (yych >= '_') goto yy130;
			} else {
				if (yych <= 'c') goto yy35;
				if (yych <= 'e') goto yy129;
			}
		}
	}
yy35:
#line 622 "tokenizer.re"
	{
                lex_int_large(al, tok, cur,
                    yylval.int_suffix.int_n,
                    yylval.int_suffix.int_kind);
                RET(TK_INTEGER)
            }
#line 636 "tokenizer.cpp"
yy36:
	yych = *++cur;
	if (yych == ':') goto yy131;
#line 532 "tokenizer.re"
	{ RET(TK_COLON) }
#line 642 "tokenizer.cpp"
yy38:
	++cur;
#line 533 "tokenizer.re"
	{ RET(TK_SEMICOLON) }
#line 647 "tokenizer.cpp"
yy40:
	yych = *++cur;
	if (yych == '=') goto yy133;
#line 554 "tokenizer.re"
	{ RET(TK_LT) }
#line 653 "tokenizer.cpp"
yy42:
	yych = *++cur;
	if (yych <= '<') goto yy43;
	if (yych <= '=') goto yy135;
	if (yych <= '>') goto yy137;
yy43:
#line 531 "tokenizer.re"
	{ RET(TK_EQUAL) }
#line 662 "tokenizer.cpp"
yy44:
	yych = *++cur;
	if (yych == '=') goto yy139;
#line 560 "tokenizer.re"
	{ RET(TK_GT) }
#line 668 "tokenizer.cpp"
yy46:
	yych = *++cur;
	if (yych <= 'S') {
		if (yych <= 'K') {
			if (yych == 'B') goto yy141;
			goto yy55;
		} else {
			if (yych <= 'L') goto yy142;
			if (yych <= 'R') goto yy55;
			goto yy143;
		}
	} else {
		if (yych <= 'k') {
			if (yych == 'b') goto yy141;
			goto yy55;
		} else {
			if (yych <= 'l') goto yy142;
			if (yych == 's') goto yy143;
			goto yy55;
		}
	}
yy47:
#line 664 "tokenizer.re"
	{ token(yylval.string); RET(TK_NAME) }
#line 693 "tokenizer.cpp"
yy48:
	yyaccept = 2;
	yych = *(mar = ++cur);
	if (yych <= 'I') {
		if (yych <= '\'') {
			if (yych == '"') goto yy146;
			if (yych <= '&') goto yy55;
			goto yy147;
		} else {
			if (yych == 'A') goto yy148;
			if (yych <= 'H') goto yy55;
			goto yy149;
		}
	} else {
		if (yych <= 'a') {
			if (yych == 'L') goto yy150;
			if (yych <= '`') goto yy55;
			goto yy148;
		} else {
			if (yych <= 'i') {
				if (yych <= 'h') goto yy55;
				goto yy149;
			} else {
				if (yych == 'l') goto yy150;
				goto yy55;
			}
		}
	}
yy49:
	yych = *++cur;
	switch (yych) {
	case 'A':
	case 'a':	goto yy151;
	case 'H':
	case 'h':	goto yy152;
	case 'L':
	case 'l':	goto yy153;
	case 'O':
	case 'o':	goto yy154;
	case 'R':
	case 'r':	goto yy155;
	case 'Y':
	case 'y':	goto yy156;
	default:	goto yy55;
	}
yy50:
	yych = *++cur;
	if (yych <= 'O') {
		if (yych <= 'E') {
			if (yych == 'A') goto yy157;
			if (yych <= 'D') goto yy55;
			goto yy158;
		} else {
			if (yych == 'I') goto yy159;
			if (yych <= 'N') goto yy55;
			goto yy160;
		}
	} else {
		if (yych <= 'e') {
			if (yych == 'a') goto yy157;
			if (yych <= 'd') goto yy55;
			goto yy158;
		} else {
			if (yych <= 'i') {
				if (yych <= 'h') goto yy55;
				goto yy159;
			} else {
				if (yych == 'o') goto yy160;
				goto yy55;
			}
		}
	}
yy51:
	yych = *++cur;
	switch (yych) {
	case 'L':
	case 'l':	goto yy162;
	case 'N':
	case 'n':	goto yy163;
	case 'Q':
	case 'q':	goto yy164;
	case 'R':
	case 'r':	goto yy165;
	case 'V':
	case 'v':	goto yy166;
	case 'X':
	case 'x':	goto yy167;
	default:	goto yy55;
	}
yy52:
	yych = *++cur;
	switch (yych) {
	case 'I':
	case 'i':	goto yy168;
	case 'L':
	case 'l':	goto yy169;
	case 'O':
	case 'o':	goto yy170;
	case 'U':
	case 'u':	goto yy171;
	default:	goto yy55;
	}
yy53:
	yych = *++cur;
	if (yych <= 'O') {
		if (yych == 'E') goto yy172;
		if (yych <= 'N') goto yy55;
		goto yy173;
	} else {
		if (yych <= 'e') {
			if (yych <= 'd') goto yy55;
			goto yy172;
		} else {
			if (yych == 'o') goto yy173;
			goto yy55;
		}
	}
yy54:
	yych = *++cur;
yy55:
	if (yybm[256+yych] & 32) {
		goto yy54;
	}
	if (yych == '_') goto yy144;
	goto yy47;
yy56:
	yych = *++cur;
	if (yych <= 'S') {
		if (yych <= 'L') {
			if (yych == 'F') goto yy175;
			goto yy55;
		} else {
			if (yych <= 'M') goto yy177;
			if (yych <= 'N') goto yy178;
			if (yych <= 'R') goto yy55;
			goto yy180;
		}
	} else {
		if (yych <= 'm') {
			if (yych == 'f') goto yy175;
			if (yych <= 'l') goto yy55;
			goto yy177;
		} else {
			if (yych <= 'n') goto yy178;
			if (yych == 's') goto yy180;
			goto yy55;
		}
	}
yy57:
	yych = *++cur;
	if (yych == 'I') goto yy182;
	if (yych == 'i') goto yy182;
	goto yy55;
yy58:
	yych = *++cur;
	if (yych <= 'O') {
		if (yych == 'E') goto yy183;
		if (yych <= 'N') goto yy55;
		goto yy184;
	} else {
		if (yych <= 'e') {
			if (yych <= 'd') goto yy55;
			goto yy183;
		} else {
			if (yych == 'o') goto yy184;
			goto yy55;
		}
	}
yy59:
	yych = *++cur;
	if (yych <= 'O') {
		if (yych == 'E') goto yy185;
		if (yych <= 'N') goto yy55;
		goto yy186;
	} else {
		if (yych <= 'e') {
			if (yych <= 'd') goto yy55;
			goto yy185;
		} else {
			if (yych == 'o') goto yy186;
			goto yy55;
		}
	}
yy60:
	yych = *++cur;
	if (yych <= 'U') {
		if (yych <= 'E') {
			if (yych == 'A') goto yy187;
			if (yych <= 'D') goto yy55;
			goto yy188;
		} else {
			if (yych == 'O') goto yy189;
			if (yych <= 'T') goto yy55;
			goto yy190;
		}
	} else {
		if (yych <= 'e') {
			if (yych == 'a') goto yy187;
			if (yych <= 'd') goto yy55;
			goto yy188;
		} else {
			if (yych <= 'o') {
				if (yych <= 'n') goto yy55;
				goto yy189;
			} else {
				if (yych == 'u') goto yy190;
				goto yy55;
			}
		}
	}
yy61:
	yyaccept = 2;
	yych = *(mar = ++cur);
	if (yych <= 'P') {
		if (yych <= '\'') {
			if (yych == '"') goto yy191;
			if (yych <= '&') goto yy55;
			goto yy192;
		} else {
			if (yych == 'N') goto yy193;
			if (yych <= 'O') goto yy55;
			goto yy194;
		}
	} else {
		if (yych <= 'n') {
			if (yych == 'U') goto yy195;
			if (yych <= 'm') goto yy55;
			goto yy193;
		} else {
			if (yych <= 'p') {
				if (yych <= 'o') goto yy55;
				goto yy194;
			} else {
				if (yych == 'u') goto yy195;
				goto yy55;
			}
		}
	}
yy62:
	yych = *++cur;
	if (yych <= 'U') {
		if (yych <= 'O') {
			if (yych == 'A') goto yy196;
			if (yych <= 'N') goto yy55;
			goto yy197;
		} else {
			if (yych == 'R') goto yy198;
			if (yych <= 'T') goto yy55;
			goto yy199;
		}
	} else {
		if (yych <= 'o') {
			if (yych == 'a') goto yy196;
			if (yych <= 'n') goto yy55;
			goto yy197;
		} else {
			if (yych <= 'r') {
				if (yych <= 'q') goto yy55;
				goto yy198;
			} else {
				if (yych == 'u') goto yy199;
				goto yy55;
			}
		}
	}
yy63:
	yych = *++cur;
	if (yych == 'U') goto yy200;
	if (yych == 'u') goto yy200;
	goto yy55;
yy64:
	yych = *++cur;
	if (yych <= 'E') {
		if (yych == 'A') goto yy201;
		if (yych <= 'D') goto yy55;
		goto yy202;
	} else {
		if (yych <= 'a') {
			if (yych <= '`') goto yy55;
			goto yy201;
		} else {
			if (yych == 'e') goto yy202;
			goto yy55;
		}
	}
yy65:
	yych = *++cur;
	switch (yych) {
	case 'A':
	case 'a':	goto yy203;
	case 'E':
	case 'e':	goto yy204;
	case 'H':
	case 'h':	goto yy205;
	case 'O':
	case 'o':	goto yy206;
	case 'T':
	case 't':	goto yy207;
	case 'U':
	case 'u':	goto yy208;
	case 'Y':
	case 'y':	goto yy209;
	default:	goto yy55;
	}
yy66:
	yych = *++cur;
	switch (yych) {
	case 'A':
	case 'a':	goto yy210;
	case 'E':
	case 'e':	goto yy211;
	case 'H':
	case 'h':	goto yy212;
	case 'O':
	case 'o':	goto yy213;
	case 'Y':
	case 'y':	goto yy215;
	default:	goto yy55;
	}
yy67:
	yych = *++cur;
	if (yych <= 'S') {
		if (yych == 'N') goto yy216;
		if (yych <= 'R') goto yy55;
		goto yy217;
	} else {
		if (yych <= 'n') {
			if (yych <= 'm') goto yy55;
			goto yy216;
		} else {
			if (yych == 's') goto yy217;
			goto yy55;
		}
	}
yy68:
	yych = *++cur;
	if (yych <= 'O') {
		if (yych == 'A') goto yy218;
		if (yych <= 'N') goto yy55;
		goto yy219;
	} else {
		if (yych <= 'a') {
			if (yych <= '`') goto yy55;
			goto yy218;
		} else {
			if (yych == 'o') goto yy219;
			goto yy55;
		}
	}
yy69:
	yych = *++cur;
	if (yych <= 'R') {
		if (yych <= 'G') {
			if (yych == 'A') goto yy220;
			goto yy55;
		} else {
			if (yych <= 'H') goto yy221;
			if (yych <= 'Q') goto yy55;
			goto yy222;
		}
	} else {
		if (yych <= 'g') {
			if (yych == 'a') goto yy220;
			goto yy55;
		} else {
			if (yych <= 'h') goto yy221;
			if (yych == 'r') goto yy222;
			goto yy55;
		}
	}
yy70:
	yyaccept = 2;
	yych = *(mar = ++cur);
	if (yych == '"') goto yy223;
	if (yych == '\'') goto yy224;
	goto yy55;
yy71:
	++cur;
yy72:
#line 526 "tokenizer.re"
	{ RET(TK_LBRACKET) }
#line 1075 "tokenizer.cpp"
yy73:
	++cur;
#line 527 "tokenizer.re"
	{ RET(TK_RBRACKET) }
#line 1080 "tokenizer.cpp"
yy75:
	++cur;
#line 538 "tokenizer.re"
	{ RET(TK_VBAR) }
#line 1085 "tokenizer.cpp"
yy77:
	yych = *++cur;
yy78:
	if (yybm[256+yych] & 64) {
		goto yy77;
	}
	if (yych >= 0x01) goto yy80;
yy79:
	cur = mar;
	if (yyaccept <= 8) {
		if (yyaccept <= 4) {
			if (yyaccept <= 2) {
				if (yyaccept <= 1) {
					if (yyaccept == 0) {
						goto yy5;
					} else {
						goto yy35;
					}
				} else {
					goto yy47;
				}
			} else {
				if (yyaccept == 3) {
